feat: add TabelaAlimento

--- a/go-alimentos/internal/app/templates/alimentos.templ
+++ b/go-alimentos/internal/app/templates/alimentos.templ
@@ -1,7 +1,7 @@
 package templates
 
 import "go-alimentos/internal/app/models"
-import "go-alimentos/internal/app/utils"
+import "go-alimentos/internal/app/templates/components"
 
 templ Alimentos(alimentos []models.Alimento) {
 	<div class="column is-6">
@@ -13,22 +13,7 @@ templ Alimentos(alimentos []models.Alimento) {
 						<!-- Detalhes do Taco (escondido por padrão) -->
 						<div class="taco-details ">
 							<h2 class="subtitle">Categoria: { item.Category }</h2>
-							<p>Energia (kcal): { utils.FloatRoundToString(item.EnergyKcal) }</p>
-							<p>Energia (kJ): { utils.FloatRoundToString(item.EnergyKj) }</p>
-							<p>Proteína: { utils.FloatToString(item.ProteinG) }</p>
-							<p>Lípidos: { utils.FloatToString(item.LipidG) }</p>
-							<p>Colesterol: { utils.FloatToString(item.CholesterolMg) }</p>
-							<p>Carboidratos: { utils.FloatToString(item.CarbohydrateG) }</p>
-							<p>Fibra: { utils.FloatToString(item.FiberG) }</p>
-							<p>Cálcio: { utils.FloatToString(item.CalciumMg) }</p>
-							<p>Magnésio: { utils.FloatToString(item.MagnesiumMg) }</p>
-							<p>Manganês: { utils.FloatToString(item.ManganeseMg) }</p>
-							<p>Fósforo: { utils.FloatToString(item.PhosphorusMg) }</p>
-							<p>Ferro: { utils.FloatToString(item.IronMg) }</p>
-							<p>Sódio: { utils.FloatToString(item.SodiumMg) }</p>
-							<p>Potássio: { utils.FloatToString(item.PotassiumMg) }</p>
-							<p>Cobre: { utils.FloatToString(item.CopperMg) }</p>
-							<p>Zinco: { utils.FloatToString(item.ZincMg) }</p>
+							@components.TabelaAlimento(item)
 						</div>
 					</div>
 				}
