fix: alguns bugs

--- a/go-alimentos/internal/app/templates/index.templ
+++ b/go-alimentos/internal/app/templates/index.templ
@@ -5,6 +5,7 @@ import "go-alimentos/internal/app/templates/components"
 templ Index(contents templ.Component, erroSearch bool) {
 	<html>
 		<head>
+			//<meta http-equiv="Content-Security-Policy" content="default-src 'self';"/>
 			<meta name="viewport" content="width=device-width, initial-scale=1"/>
 			<script src="https://unpkg.com/htmx.org@1.9.8"></script>
 			<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.0/css/bulma.min.css"/>
